--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,4 +1,28 @@
 akka {
-  actor {
+  extensions = [akka.persistence.Persistence]
+
+  persistence {
+
+    journal {
+      plugin = "akka.persistence.journal.inmem"
+
+      inmem {
+        class = "akka.persistence.journal.inmem.InmemJournal"
+        plugin-dispatcher = "akka.actor.default-dispatcher"
+        test-serialization = off
+      }
+    }
+
+    snapshot-store {
+      plugin = "akka.persistence.snapshot-store.local"
+
+      local {
+        class = "akka.persistence.snapshot.local.LocalSnapshotStore"
+        plugin-dispatcher = "akka.persistence.dispatchers.default-plugin-dispatcher"
+        stream-dispatcher = "akka.persistence.dispatchers.default-stream-dispatcher"
+        dir = "target/snapshot"
+        max-load-attempts = 3
+      }
+    }
   }
 }
