--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,8 +1,28 @@
 akka {
   extensions = [akka.persistence.Persistence]
 
-  persistence {
+  actor {
+    provider = cluster
+  }
 
+  remote {
+    artery.canonical {
+      port = 2553
+      hostname = 127.0.0.1
+    }
+  }
+
+  cluster {
+    seed-nodes = [
+      "akka://akka-example@127.0.0.1:2553"
+    ]
+
+    sharding {
+      number-of-shards = 1
+    }
+  }
+
+  persistence {
     journal {
       plugin = "akka.persistence.journal.inmem"
 
