Could not initialize class akka.http.scaladsl.Http

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,8 @@
 akka {
   extensions = [akka.persistence.Persistence]
 
+  jvm-exit-on-fatal-error = false
+
   actor {
     provider = cluster
   }
